<resources>
    <string name="app_name">MeraBills</string>
    <string name="amount">amount</string>
    <string name="add_payments"><u>Add Payments</u></string>
    <string name="add_payment">Add Payment</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_credit_card_numbers">Enter Credit Card Numbers</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="upi_id">UPI ID</string>
    <string name="enter_amount">Enter amount</string>
    <string name="payments">Payments</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="save">Save</string>

    <string-array name="chips">
        <item>₹ 100</item>
        <item>₹ 200</item>
        <item>₹ 300</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Cash</item>
        <item>Net Banking</item>
        <item>Credit Card</item>
        <item>UPI</item>
    </string-array>
</resources>